# pygmt

./: .azure-pipelines.yml  .bandit  .buildinfo  .codeclimate.yml  .codecov.yml  .coveragerc  .deepsource.toml  .dvcignore  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .stickler.yml  .travis.yml  AGENTS.md  AUTHORS.md  AUTHORSHIP.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MAINTAINER_CHECKLIST.md  MAINTENANCE.md  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  Untitled.ipynb  Untitled1.ipynb  ascii.py  blockm_issue_draft.md  codecov.yml  conda-requirements.txt  design.html  environment.yml  (+15 more)
.dvc/: config
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  config.yml  dependabot.yml  release-drafter.yml
0.0.1a0/: genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  sphinxext.html
_sources/: license.rst.txt
api/: gmt.clib.html  gmt.datasets.html  gmt.datasets.load_japan_quakes.html  gmt.exceptions.GMTCLibError.html  gmt.exceptions.GMTOSError.html  gmt.exceptions.GMTVersionError.html  gmt.helpers.build_arg_string.html  gmt.helpers.data_kind.html  gmt.helpers.html  gmt.helpers.is_nonstr_iter.html  gmt.print_libgmt_info.html  gmt.which.html  index.html
ci/: azure-pipelines-windows.yml  deploy-docs.sh  deploy-pypi.sh  install-miniconda.sh  make_environment.sh  travis-build-gmt.sh  upload-docs.sh
dev/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  license.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sphinxext.html  team.html
doc/: LICENSE.txt  Makefile  api.rst  changes.md  changes.rst  compatibility.rst  conf.py  contribute.rst  contributing.md  design.rst  ecosystem.md  external_resources.md  first-steps.ipynb  index.md  index.rst  install.md  install.rst  maintenance.md  minversions.md  minversions.rst  notebook-support.ipynb  overview.md  overview.rst  plot-data-points.ipynb  sg_execution_times.rst  sphinxext.rst  team.md  team.rst  user_contributions.md
examples/: README.txt  coast.py
gmt/: __init__.py  _version.py  base_plotting.py  decorators.py  exceptions.py  extra_modules.py  figure.py  gridding.py  modules.py  ps_modules.py  session_management.py  utils.py
helpers/: build-gmt-master.sh
pygmt/: __init__.py  _show_versions.py  _state.py  _typing.py  _version.py  accessors.py  alias.py  base_plotting.py  conftest.py  datatypes.py  encodings.py  enums.py  exceptions.py  figure.py  filtering.py  gridding.py  gridops.py  io.py  mathops.py  modules.py  params.py  projection.py  pygmtplot.py  sampling.py  session_management.py  sphinx_gallery.py  subplot.py  x2sys.py  xarray_backend.py
sandbox/: pygmt_docstrings.py
tutorials/: first-steps.html  index.html  overview.py  plot.py
v0.1.0/: .buildinfo  changes.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html
v0.1.1/: .buildinfo  changes.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
v0.1.2/: .buildinfo  changes.html  genindex.html  index.html  install.html  objects.inv  overview.html  py-modindex.html  search.html
v0.10.0/: .buildinfo  changes.html  contributing.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  team.html
v0.11.0/: .buildinfo  changes.html  contributing.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.12.0/: .buildinfo  changes.html  contributing.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.13.0/: .buildinfo  changes.html  contributing.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.14.0/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.14.1/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.14.2/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.15.0/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.16.0/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  team.html
v0.17.0/: .buildinfo  changes.html  contributing.html  ecosystem.html  external_resources.html  genindex.html  index.html  install.html  maintenance.html  minversions.html  objects.inv  overview.html  search.html  searchindex.js  sg_execution_times.html  team.html
(+10148 files in other folders)
